--- a/clusters/home/apps/weaveworks-dashboard/kustomization.yaml
+++ b/clusters/home/apps/weaveworks-dashboard/kustomization.yaml
@@ -1,8 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - bitnami
-  - jameswynn
-  - open-8gears
-  - vaultwarden
-  - weaveworks
+  - release.yaml
