--- a/clusters/home/helm/weaveworks/kustomization.yaml
+++ b/clusters/home/helm/weaveworks/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system
 resources:
   - repository.yaml
-  - release.yaml
-  - service.yaml
+  - ingress.yaml
