--- a/clusters/home/core.yaml
+++ b/clusters/home/core.yaml
@@ -2,13 +2,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ingress-nginx
+  name: core
   namespace: flux-system
 spec:
   interval: 1m
-  prune: false
+  prune: true
   wait: true
-  path: ./infrastructure/ingress-nginx
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: helm
+  path: ./clusters/home/core
   sourceRef:
     kind: GitRepository
     name: flux-system
