--- a/clusters/home/ingress-nginx.yaml
+++ b/clusters/home/ingress-nginx.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
-  prune: false
+  prune: true
   wait: true
   path: ./infrastructure/ingress-nginx
   sourceRef:
