refactor: update longhorn secret encryption

--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-data:
-    auth: ENC[AES256_GCM,data:vFnW9Olw8jThI0j5lOvXP+lkgWTS0JjO/oRtTzdmn3uEEHAd7iBEllJzkFcrw60Zgka6DagnaFi/KRChoL1wmB30pGc=,iv:UPsD0kXZJYDnMtsbwoi04XkO2HEukQsMOaOueDEIb4M=,tag:PYtqCBaFZ14LJkdje73arA==,type:str]
+stringData:
+    auth: ENC[AES256_GCM,data:in2mY7VzGF2tKFnLPcsoBEEnGRNQaEzgBmJvGXHd32o4tTrwqs61x4tjcaBu1a5oXgoaYPYYPNtiZ8Q+NdHoNvgihTQ=,iv:LXzfTIeIPyFIEM9RZCem3Ao61ZCm+Kzx+hubWCjewDw=,tag:1AOlcpTrQ4pCuTRXwIcUiA==,type:str]
 kind: Secret
 metadata:
     name: basic-auth-longhorn
@@ -20,8 +20,8 @@ sops:
             M3YrUkE4VlNrek9OUzI4d1FTdFF0RGMK86C6MmhHXwoN4n+ttFcgEtnGIuynR7S8
             PTea950q+3SyheZUDzsTiEifcDpwJC9ee0jz/LRBkWT8CA5DkGd1rg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T22:41:08Z"
-    mac: ENC[AES256_GCM,data:EJejy4S/Id0kxxPZuHejbNW9Cb0kTJ3gMwtn3YN0dN9l95qe6NTCM/8hlbDxN2ZEvOg4qI2PMo8h0KPLuj5+YaC5b+O9X8Buq4oNCIuW+tEiznwqmwRsLixXH8ck0QJdl2rToJR1mEoAxhuXie5NY4Vp+MTB1Q+dZtlkRbnYtl8=,iv:BtRtwnf26/o04EEOCv7wr7GaAleuYZxllx4gJeGq+DA=,tag:C8Oz90M0sMImuU6tyoBr3Q==,type:str]
+    lastmodified: "2023-11-26T22:46:27Z"
+    mac: ENC[AES256_GCM,data:K2wDm7ZIGeJaLXa2RDj2cT2vnPAARP9hBu3MEi73BZ7XYNXsjheySmBYV7qDm58UCxwWSNPYNFjNglnEPZloraU+6gHXG8GJiERgiDaCLMJpb+o32BqbEB1DLfsB1nlMKWOkGlzr9S2dB7tnDBkZUaHhO/lvYtgpx+iMwi3vLZc=,iv:6BVHGhvcdFwzDBoxgtDGq5dmh2FBTRmdV/woM7EQ6V8=,tag:yaCRRiMiyl02FcgwsJGXeg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
