change secret in longhorn

--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
-stringData:
-    auth: ENC[AES256_GCM,data:in2mY7VzGF2tKFnLPcsoBEEnGRNQaEzgBmJvGXHd32o4tTrwqs61x4tjcaBu1a5oXgoaYPYYPNtiZ8Q+NdHoNvgihTQ=,iv:LXzfTIeIPyFIEM9RZCem3Ao61ZCm+Kzx+hubWCjewDw=,tag:1AOlcpTrQ4pCuTRXwIcUiA==,type:str]
+data:
+    auth: ENC[AES256_GCM,data:AN2IF13rp06Ydgk5sxLhRLdcl+V3eWwVLF1BVHzkh9CbBcOUMG6eZcYubY3ZVm94fAXwpRSZbe0kkenJw7kNFACdnZQ=,iv:SemFFk9k2UTpIxGFqATApEgBu1Cy2CkeExCvB/ltzqk=,tag:fIqJsXxeCbIhf1/AqRdzFg==,type:str]
 kind: Secret
 metadata:
     name: basic-auth-longhorn
-    namespace: longhorn-system
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +13,14 @@ sops:
         - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwdG1MVVdTMGJjWkNVdzNH
-            Kys1cFAwMFlwNnBFWjk3dTJacWxmdllOYWo4CmV5eTYvMm9vN20vR0pYSXl5bDJN
-            bjdBTDhzTDkxSXE4UWg1ZkQ4OVdEQlUKLS0tIGlqcVJnK3VmdXR1LzZoV1M4VEhp
-            M3YrUkE4VlNrek9OUzI4d1FTdFF0RGMK86C6MmhHXwoN4n+ttFcgEtnGIuynR7S8
-            PTea950q+3SyheZUDzsTiEifcDpwJC9ee0jz/LRBkWT8CA5DkGd1rg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4WG5jeUZSK1Q4RUlCMVdm
+            U2VNOHNNcHZueXh0TnBwQlBONE1nVWhsMW1VCnE2SDFDelAzRkNPQ0JScStxS0ZH
+            VEpRaFJ3bHFLQ1JwMU51eU1aYUN5RFkKLS0tIE9YcHVHUTdWT3dxbjdNNkxrZlIx
+            NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
+            aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T22:46:27Z"
-    mac: ENC[AES256_GCM,data:K2wDm7ZIGeJaLXa2RDj2cT2vnPAARP9hBu3MEi73BZ7XYNXsjheySmBYV7qDm58UCxwWSNPYNFjNglnEPZloraU+6gHXG8GJiERgiDaCLMJpb+o32BqbEB1DLfsB1nlMKWOkGlzr9S2dB7tnDBkZUaHhO/lvYtgpx+iMwi3vLZc=,iv:6BVHGhvcdFwzDBoxgtDGq5dmh2FBTRmdV/woM7EQ6V8=,tag:yaCRRiMiyl02FcgwsJGXeg==,type:str]
+    lastmodified: "2023-11-26T22:53:49Z"
+    mac: ENC[AES256_GCM,data:23i0GjNhq9fWBT/DbgaFnB6DVVPe4jpwZS+RTGFJSgTuKxqfU4tLb44kQ+kKzip3sjHJ6TKrte5bPYLqUICWHT3aJCA4Ce2ZRKaNg/iBSV8W3MBWiMrNQv7bZwR3q7rHg3tZ9lOTn3mu7c9gjV+V4nkKgykcAbwr3GVBia+HkXA=,iv:XHcbfayjTtbDP8dSUojmYI0G99J30Yk2EVoNdDLQHds=,tag:PJ7NbsfqOwisvcmcuOiScg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
