fix: set prune option to false in snapshot-controller.yaml

--- a/clusters/home/snapshot-controller.yaml
+++ b/clusters/home/snapshot-controller.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
-  prune: true
+  prune: false
   wait: true
   path: ./external-crds/snapshot-controller
   sourceRef:
