migrate snapshot-controller to new dir structure

--- a/clusters/home/core.yaml
+++ b/clusters/home/core.yaml
@@ -14,6 +14,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
+    - name: base
   path: ./clusters/home/core
   sourceRef:
     kind: GitRepository
