--- a/clusters/home/crds.yaml
+++ b/clusters/home/crds.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: base
+  name: crds
   namespace: flux-system
 spec:
   interval: 1m
@@ -14,7 +14,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
-  path: ./clusters/home/base
+  path: ./clusters/home/crds
   sourceRef:
     kind: GitRepository
     name: flux-system
