refactor: update longhorn secret.yaml

--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-data:
-    auth: ENC[AES256_GCM,data:AN2IF13rp06Ydgk5sxLhRLdcl+V3eWwVLF1BVHzkh9CbBcOUMG6eZcYubY3ZVm94fAXwpRSZbe0kkenJw7kNFACdnZQ=,iv:SemFFk9k2UTpIxGFqATApEgBu1Cy2CkeExCvB/ltzqk=,tag:fIqJsXxeCbIhf1/AqRdzFg==,type:str]
+stringData:
+    auth: ENC[AES256_GCM,data:nrfAGBCXEbbnStydHkmRjiUVLCwmTZzfM++NjRrjI2N1TfEKq9ZUoaaM4tpamYSeiSJbITwNJWJlQnnwRDSwKI0F1dg=,iv:sKhiRA92JaFk1KVrCX+V23d6+ke/tAl1E5isRzTfkvM=,tag:05rN9gpRSEfmDljJ9g50zA==,type:str]
 kind: Secret
 metadata:
     name: basic-auth-longhorn
@@ -19,8 +19,8 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T22:53:49Z"
-    mac: ENC[AES256_GCM,data:23i0GjNhq9fWBT/DbgaFnB6DVVPe4jpwZS+RTGFJSgTuKxqfU4tLb44kQ+kKzip3sjHJ6TKrte5bPYLqUICWHT3aJCA4Ce2ZRKaNg/iBSV8W3MBWiMrNQv7bZwR3q7rHg3tZ9lOTn3mu7c9gjV+V4nkKgykcAbwr3GVBia+HkXA=,iv:XHcbfayjTtbDP8dSUojmYI0G99J30Yk2EVoNdDLQHds=,tag:PJ7NbsfqOwisvcmcuOiScg==,type:str]
+    lastmodified: "2023-11-26T23:18:07Z"
+    mac: ENC[AES256_GCM,data:xCBDtJwYIkxERT53eGhrIhMCi2ilBfl73GqqhxQ2CPBILyGn7eyoHFSFKYC8dfmQ0LV/KdZ2th4cKiTp5wYuFbi5lMCvR9yzhfpEH1u8kJ/RD2ImJZjca/351gjFb7fU8DQ1MI/r45R6xqYJo6/TPNwZBEC4M63VdwkFxHb0iE4=,iv:TnYbDm7PA3p4ObMdSvDzcdKVmF5OmAfwRN2/L+8KkNA=,tag:pGldbvEsfHybFgJXn2myaQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
