--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -4,6 +4,7 @@ stringData:
 kind: Secret
 metadata:
     name: basic-auth-longhorn
+    namespace: longhorn-system
 sops:
     kms: []
     gcp_kms: []
@@ -19,8 +20,8 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T23:18:07Z"
-    mac: ENC[AES256_GCM,data:xCBDtJwYIkxERT53eGhrIhMCi2ilBfl73GqqhxQ2CPBILyGn7eyoHFSFKYC8dfmQ0LV/KdZ2th4cKiTp5wYuFbi5lMCvR9yzhfpEH1u8kJ/RD2ImJZjca/351gjFb7fU8DQ1MI/r45R6xqYJo6/TPNwZBEC4M63VdwkFxHb0iE4=,iv:TnYbDm7PA3p4ObMdSvDzcdKVmF5OmAfwRN2/L+8KkNA=,tag:pGldbvEsfHybFgJXn2myaQ==,type:str]
+    lastmodified: "2023-11-26T23:21:00Z"
+    mac: ENC[AES256_GCM,data:L0QAyVDhVmLXVoEGmVzRHWp5hbUW89pKzLcnK/b/By6pN6COqESWeQd/deqlpwKG+K8bvi1tdm+1xagedg+Y6/jQgKfi8VT2AcihgeCeyyKZLIwa7UF8tdRS2r6Cr7mYl+aU1YyrXR+AZO4Qcu/nQfK6eLLgNyMLi2FlUP7I/z4=,iv:i1jdiAFVa+sd63T/1fHAx44KrQ/ktHBOS0s2vMo1IPA=,tag:RjzHUfTtMUCkqrGNSamtTQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
