chore(base): update path in home cluster configuration

--- a/clusters/home/base.yaml
+++ b/clusters/home/base.yaml
@@ -14,7 +14,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
-  path: ./clusters/infrastructure/base
+  path: ./clusters/home/base
   sourceRef:
     kind: GitRepository
     name: flux-system
