refactor: update secret.yaml auth data

--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-stringData:
-    auth: ENC[AES256_GCM,data:nrfAGBCXEbbnStydHkmRjiUVLCwmTZzfM++NjRrjI2N1TfEKq9ZUoaaM4tpamYSeiSJbITwNJWJlQnnwRDSwKI0F1dg=,iv:sKhiRA92JaFk1KVrCX+V23d6+ke/tAl1E5isRzTfkvM=,tag:05rN9gpRSEfmDljJ9g50zA==,type:str]
+data:
+    auth: ENC[AES256_GCM,data:Y+7eNtgEYABR4JlG5hhmqQro4NAfgx/Z9Q4y9E3yozqY0Spy81B2j/UpNaZKZcnULBua58qSCPZCFHRiaTSzYLX9nXU=,iv:Q6G7DD1zXPFMBtsaOi6BkfvQSdmDKLiTcNpIzGkHp/Y=,tag:onrnnHcLngbmlE/TFJ9XDQ==,type:str]
 kind: Secret
 metadata:
     name: basic-auth-longhorn
@@ -20,8 +20,8 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T23:21:00Z"
-    mac: ENC[AES256_GCM,data:L0QAyVDhVmLXVoEGmVzRHWp5hbUW89pKzLcnK/b/By6pN6COqESWeQd/deqlpwKG+K8bvi1tdm+1xagedg+Y6/jQgKfi8VT2AcihgeCeyyKZLIwa7UF8tdRS2r6Cr7mYl+aU1YyrXR+AZO4Qcu/nQfK6eLLgNyMLi2FlUP7I/z4=,iv:i1jdiAFVa+sd63T/1fHAx44KrQ/ktHBOS0s2vMo1IPA=,tag:RjzHUfTtMUCkqrGNSamtTQ==,type:str]
+    lastmodified: "2023-11-26T23:37:20Z"
+    mac: ENC[AES256_GCM,data:19mmDPL2K0puFa8fbcvdvKrTaiSWMpPqgcFgDIj2kETeOHLr7zaz/o0GbPqaz5ZRbIPwW8XQ42Dpp3hnLenDFsfWMx3KQ1x4/SCST/YSCYQcOqJG1QnxXBtIE4p/1Q2UeXBzE8E5LNYF0QOAZkrXN6uZ+2DKKocU/s8JJMHtcgM=,iv:9IQsRNzJIS5j/oQI+LievYPcHL4+Mvmr/LK6+ibrj+c=,tag:TnS5TLPj59XHb6V+7fR9gg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
