--- a/clusters/home/velero.yaml
+++ b/clusters/home/velero.yaml
@@ -8,7 +8,7 @@ spec:
   dependsOn:
     - name: sealed-secrets
   interval: 1m
-  prune: true
+  prune: false
   wait: true
   path: ./infrastructure/velero
   sourceRef:
