feat: Add longhorn settings.yaml file

--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -20,8 +20,37 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T23:37:20Z"
-    mac: ENC[AES256_GCM,data:19mmDPL2K0puFa8fbcvdvKrTaiSWMpPqgcFgDIj2kETeOHLr7zaz/o0GbPqaz5ZRbIPwW8XQ42Dpp3hnLenDFsfWMx3KQ1x4/SCST/YSCYQcOqJG1QnxXBtIE4p/1Q2UeXBzE8E5LNYF0QOAZkrXN6uZ+2DKKocU/s8JJMHtcgM=,iv:9IQsRNzJIS5j/oQI+LievYPcHL4+Mvmr/LK6+ibrj+c=,tag:TnS5TLPj59XHb6V+7fR9gg==,type:str]
+    lastmodified: "2023-11-26T23:57:27Z"
+    mac: ENC[AES256_GCM,data:x02CXwGRjtCaRbnP3PlaVUxKiPdibqjD/IDLDr/aV8d9HdJolA5eLvRB+kAjKVPdsgIwzoNtxeH4fXhZU3CvMqCClrTl1IUtBJ6upDDH3EmlbjTCZIuRa8yU9UcB5nHOo71JG5eP8Z/lFzKUrXbBefVvos9xEifpaQ52Xpv3eVM=,iv:ndNoM4RuNDbmVd2LiS4IVcyWakVfB6Eu9BtP5N3/rG4=,tag:YtbZq9o4cTqqlyzW7dZfnQ==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
+---
+apiVersion: v1
+data:
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:YbsynWHJktnaWLGkbSPIxlfLLaw=,iv:q7Vjd0PUTpVTiH0kTj7WHtwtb08HY9qsPQrcFH4uUQs=,tag:ccjWsJv75r/oBF/mRLzN9w==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:CJ7icirT0rJO9Qiwp6twndk8BvXWNQiYzlCJyBtwEvaxh741qMDz6Q==,iv:Nm9x8QV4Urtdm9uwxb/oDBBL2jOOMK1F0rRXAHjYwJg=,tag:0TWBYsDYTD5bWFLM0JFKNQ==,type:str]
+kind: Secret
+metadata:
+    name: longhorn-aws-credentials
+    namespace: longhorn-system
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4WG5jeUZSK1Q4RUlCMVdm
+            U2VNOHNNcHZueXh0TnBwQlBONE1nVWhsMW1VCnE2SDFDelAzRkNPQ0JScStxS0ZH
+            VEpRaFJ3bHFLQ1JwMU51eU1aYUN5RFkKLS0tIE9YcHVHUTdWT3dxbjdNNkxrZlIx
+            NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
+            aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-11-26T23:57:27Z"
+    mac: ENC[AES256_GCM,data:x02CXwGRjtCaRbnP3PlaVUxKiPdibqjD/IDLDr/aV8d9HdJolA5eLvRB+kAjKVPdsgIwzoNtxeH4fXhZU3CvMqCClrTl1IUtBJ6upDDH3EmlbjTCZIuRa8yU9UcB5nHOo71JG5eP8Z/lFzKUrXbBefVvos9xEifpaQ52Xpv3eVM=,iv:ndNoM4RuNDbmVd2LiS4IVcyWakVfB6Eu9BtP5N3/rG4=,tag:YtbZq9o4cTqqlyzW7dZfnQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
