--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -20,16 +20,16 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T23:57:27Z"
-    mac: ENC[AES256_GCM,data:x02CXwGRjtCaRbnP3PlaVUxKiPdibqjD/IDLDr/aV8d9HdJolA5eLvRB+kAjKVPdsgIwzoNtxeH4fXhZU3CvMqCClrTl1IUtBJ6upDDH3EmlbjTCZIuRa8yU9UcB5nHOo71JG5eP8Z/lFzKUrXbBefVvos9xEifpaQ52Xpv3eVM=,iv:ndNoM4RuNDbmVd2LiS4IVcyWakVfB6Eu9BtP5N3/rG4=,tag:YtbZq9o4cTqqlyzW7dZfnQ==,type:str]
+    lastmodified: "2023-11-27T00:06:38Z"
+    mac: ENC[AES256_GCM,data:bexkFTbb5jYilZXKA6M0+KGz3mdkmW6WTY1q/xFQ4VBbUdkHuJZvv8cdUCtloF4UDmaG/GbAX7GbJQ0e8Q/aj1jL5hp1rmESjKY9a7Zfw5KZJUaFZrPljCiTgxOebMA4f2FfxZxzXtnP2Sf3ExkMCgxesccpKDA5fJe2S7d4iGI=,iv:FxzPLe+WxGM2xOQtefkV6lp31lWTPAgJyfVrHDQRJCU=,tag:70Z9YX0Ji/c88VrWTLt9Nw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
 ---
 apiVersion: v1
-data:
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:YbsynWHJktnaWLGkbSPIxlfLLaw=,iv:q7Vjd0PUTpVTiH0kTj7WHtwtb08HY9qsPQrcFH4uUQs=,tag:ccjWsJv75r/oBF/mRLzN9w==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:CJ7icirT0rJO9Qiwp6twndk8BvXWNQiYzlCJyBtwEvaxh741qMDz6Q==,iv:Nm9x8QV4Urtdm9uwxb/oDBBL2jOOMK1F0rRXAHjYwJg=,tag:0TWBYsDYTD5bWFLM0JFKNQ==,type:str]
+stringData:
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:WqtCb1JRZCJVP7pajgCNcAORZ2E=,iv:hf2KMa7nNCncBmSu+HpPCP3I/H9rmYt4PsQlcWU3I98=,tag:kXAwwrlkaNyVXjMhCURhxQ==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:VjTEGIqJL7pNs88+BtnbDUVuSBnUhjC8eMsI1Hc6HifHFlB0fgi/9Q==,iv:PWFFDzNRIv2cAWDMNVtMICtP2VRVh2sSNmqQe0IJsdE=,tag:LKeH9X8MpLGBxB1DQ1Z5FQ==,type:str]
 kind: Secret
 metadata:
     name: longhorn-aws-credentials
@@ -49,8 +49,8 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T23:57:27Z"
-    mac: ENC[AES256_GCM,data:x02CXwGRjtCaRbnP3PlaVUxKiPdibqjD/IDLDr/aV8d9HdJolA5eLvRB+kAjKVPdsgIwzoNtxeH4fXhZU3CvMqCClrTl1IUtBJ6upDDH3EmlbjTCZIuRa8yU9UcB5nHOo71JG5eP8Z/lFzKUrXbBefVvos9xEifpaQ52Xpv3eVM=,iv:ndNoM4RuNDbmVd2LiS4IVcyWakVfB6Eu9BtP5N3/rG4=,tag:YtbZq9o4cTqqlyzW7dZfnQ==,type:str]
+    lastmodified: "2023-11-27T00:06:38Z"
+    mac: ENC[AES256_GCM,data:bexkFTbb5jYilZXKA6M0+KGz3mdkmW6WTY1q/xFQ4VBbUdkHuJZvv8cdUCtloF4UDmaG/GbAX7GbJQ0e8Q/aj1jL5hp1rmESjKY9a7Zfw5KZJUaFZrPljCiTgxOebMA4f2FfxZxzXtnP2Sf3ExkMCgxesccpKDA5fJe2S7d4iGI=,iv:FxzPLe+WxGM2xOQtefkV6lp31lWTPAgJyfVrHDQRJCU=,tag:70Z9YX0Ji/c88VrWTLt9Nw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
