--- a/clusters/home/apps/speedtest-tracker/deployment.yaml
+++ b/clusters/home/apps/speedtest-tracker/deployment.yaml
@@ -29,7 +29,7 @@ spec:
         - name: DB_CONNECTION
           value: pgsql
         - name: DB_HOST
-          value: postgresql
+          value: postgresql.default.svc.cluster.local
         - name: DB_PORT
           value: "5432"
         - name: DB_DATABASE
