chore: Add imagePullPolicy to speedtest-tracker deployment

--- a/clusters/home/apps/speedtest-tracker/deployment.yaml
+++ b/clusters/home/apps/speedtest-tracker/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     spec:
       containers:
       - name: speedtest-tracker
+        imagePullPolicy: IfNotPresent
         image: ghcr.io/alexjustesen/speedtest-tracker
         resources:
           limits:
