--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql
+  # - postgresql
   - homepage
   - n8n
   - vaultwarden
   - cloudflare
   - weaveworks-dashboard
   - descheduler
-  - speedtest-tracker
+  # - speedtest-tracker
