fix(deployment.yaml): fix secret key for mariadb password

--- a/clusters/home/apps/speedtest-tracker/deployment.yaml
+++ b/clusters/home/apps/speedtest-tracker/deployment.yaml
@@ -41,7 +41,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mariadb
-              key: password
+              key: mariadb-password
       volumes:
       - name: speedtest-tracker
         persistentVolumeClaim:
