chore: disable readiness probe in mariadb release.yaml

--- a/clusters/home/apps/mariadb/release.yaml
+++ b/clusters/home/apps/mariadb/release.yaml
@@ -34,5 +34,7 @@ spec:
       persistence: 
         enabled: true
         existingClaim: data-mariadb-0
+    readinessProbe:
+      enabled: false
     livenessProbe:
       enabled: false
