--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql
+  # - postgresql
   - homepage
   - n8n
   - vaultwarden
@@ -9,4 +9,4 @@ resources:
   - weaveworks-dashboard
   - descheduler
   # - mariadb
-  - speedtest-tracker
+  # - speedtest-tracker
