feat: Add external mariadb and speedtest-tracker resources

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -9,4 +9,5 @@ resources:
   - weaveworks-dashboard
   - descheduler
   # - mariadb
-  # - speedtest-tracker
+  - mariadb-external
+  - speedtest-tracker
