style: modify ingress description

--- a/clusters/home/apps/speedtest-tracker/ingress.yaml
+++ b/clusters/home/apps/speedtest-tracker/ingress.yaml
@@ -20,7 +20,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     gethomepage.dev/enabled: "true"
-    gethomepage.dev/description: Self-hosted internet performance tracking application
+    gethomepage.dev/description: Self-hosted internet performance tracking
     gethomepage.dev/group: Infrastructure
     gethomepage.dev/icon: speedtest-tracker
     gethomepage.dev/name: Speedtest Tracker
