chore(deployment): update secret name in deployment.yaml

--- a/clusters/home/apps/linkwarden/deployment.yaml
+++ b/clusters/home/apps/linkwarden/deployment.yaml
@@ -30,7 +30,7 @@ spec:
       env:
       - name: DATABASE_URL
         secretKeyRef:
-          name: postgresql
+          name: linkwarden
           key: postgres-url
       - name: NEXTAUTH_SECRET
         secretKeyRef:
