--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -9,5 +9,6 @@ resources:
   - weaveworks-dashboard
   - descheduler
   - mariadb-external
+  - postgresql-external
   - speedtest-tracker
   - linkwarden
