--- a/clusters/home/apps/linkwarden/deployment.yaml
+++ b/clusters/home/apps/linkwarden/deployment.yaml
@@ -28,8 +28,8 @@ spec:
         - name: DATABASE_URL
           valueFrom:
             secretKeyRef:
-              name: linkwarden
-              key: database-url
+              name: postgresql-external
+              key: url
         - name: NEXTAUTH_SECRET
           valueFrom:
             secretKeyRef:
