chore(deployment.yaml): update linkwarden image to latest version

--- a/clusters/home/apps/linkwarden/deployment.yaml
+++ b/clusters/home/apps/linkwarden/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: linkwarden
         imagePullPolicy: IfNotPresent
-        image: ghcr.io/linkwarden/linkwarden:v2.3.0
+        image: ghcr.io/linkwarden/linkwarden:latest
         resources:
           limits:
             memory: "128Mi"
