refactor: Update linkwarden deployment and secret

--- a/clusters/home/apps/linkwarden/deployment.yaml
+++ b/clusters/home/apps/linkwarden/deployment.yaml
@@ -35,6 +35,13 @@ spec:
             secretKeyRef:
               name: linkwarden
               key: auth-secret
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: linkwarden
+              key: postgres-password
+        - name: NEXTAUTH_URL
+          value: https://linkwarden.pacholo.com
       volumes:
         - name: linkwarden
           persistentVolumeClaim:
