--- a/clusters/home/apps/linkwarden/secret.yaml
+++ b/clusters/home/apps/linkwarden/secret.yaml
@@ -5,6 +5,7 @@ metadata:
 type: Opaque
 stringData:
     database-url: ENC[AES256_GCM,data:3VPCkFUxyL6GJXeGonlzpcXTMo7yAR9Pz9DDiV0MpjUVGOMqhAs5l83CeFsO1ATckfOBG99k0r1hPNM+jHsZFIotpE2JZTcWJo6OljyYab44MCQudvtipMIz6RIVWUKQHw8PRZ0HgY78aWznKBFCP5q0USAuzPRsLT/Kcdp/5SkoekJMuW+B9w7NsH9yCVvFvQ==,iv:jVLGQzUdD/0vndsvJWTtKsmRd3htY2f/TY1uSIaqODk=,tag:XCbahrnD6MYcr+se49sfaw==,type:str]
+    postgres-password: ENC[AES256_GCM,data:QrdA8Np5s8zWqibmje/lUm9tpb4OTsmVXG5Tiu2ei8HQwrAiRYQwYTb7ZjVSKmA6PEb7X6DO9klZGYohwJWw9wprC+Ls,iv:ttOs9Z1gSuQ3FCQxMSi6NO4b/2GZR3nlaU1fhPOJN4k=,tag:7lHujVtLaLhukrf0CJvdrA==,type:str]
     auth-secret: ENC[AES256_GCM,data:gU7mb3dFwhY1LZVZ8zhw9RGZNERcfBwGJ14xRNudb1OQ81K+mvRlR7aRsKIWrvGbW0Mxk96Lfmco8g==,iv:kCQwTV3f4y1WSMqQt9Kxe9uJPAZXBGIp/tEjq4uQno4=,tag:RkIWZQ7JlLWDX8ck8iy4mg==,type:str]
 sops:
     kms: []
@@ -21,8 +22,8 @@ sops:
             QU1naW04N3hmTXZmRmY0N3crd0I2UnMKD0Qg0MtUgw2a4XpEujGBySC1Nwg50uuA
             9OnsFU/DJwhgTVUffnvlpC0RRViN2IQEsGYv330m97rEtSutTyLzGQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-30T02:30:49Z"
-    mac: ENC[AES256_GCM,data:211mB1n9yhCT9WSnSYDgju8iwk8ZIYeVo9HqIlhUk/DfNzruiyCLxJOsmE14//oVObr79RDlnsSHpu52Cy55wMN4r5fPZv6ixY4qzBhCkywNWxt1Za0/jibxxaISpKUCV0DJB2kqaLeCXDnR1orJbcmw4dHeLTqUDrNB+zYlD5E=,iv:k2uydOG8KtUSAQVkW+4New+Ppbkq5Wmhi2sEaIP7Dtw=,tag:NMDo6RI/arMAAom+XcT71w==,type:str]
+    lastmodified: "2023-11-30T03:11:49Z"
+    mac: ENC[AES256_GCM,data:WWgcLpQvHXiiKZsiloZaD+npffG/9cXoBYNPBQWBNtUAZlcK9uGIIeVChhskQKQD4/8XJaEuwOCE+xJaKBaz/2Ye3EiKknti7nnJUbMdEqW2glAQi2jhjsWrGLsNEvMmnp/Y9Z+3PX8vN/bQdJp7wWTPysSghGI05hnCCsRPgU8=,iv:jpLbA1mx001hz5Echl5eyMu02mPGgT11TnqiNnQi/SQ=,tag:n7bDnHSKabfOUCGISjvjNg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
