--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -26,7 +26,7 @@ spec:
   values:
     image:
       repository: n8nio/n8n
-      tag: ai-beta #1.18.0
+      tag: 1.18.0
       pullPolicy: IfNotPresent
     # extraEnvSecrets:
     #   DB_POSTGRESDB_PASSWORD:
