--- a/clusters/home/apps/linkstack/ingress.yaml
+++ b/clusters/home/apps/linkstack/ingress.yaml
@@ -23,7 +23,7 @@ metadata:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/description: Self-hosted open-source Linktree alternative
     gethomepage.dev/group: Apps/Services
-    gethomepage.dev/icon: linkstack
+    gethomepage.dev/icon: https://raw.githubusercontent.com/LinkStackOrg/branding/main/logo/svg/logo_animated.svg
     gethomepage.dev/name: linkstack
     gethomepage.dev/pod-selector: app=linkstack
     gethomepage.dev/weight: "1"
